--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "CNPrint-VueEditor",
+  "name": "print-vue-editor",
   "version": "2.0.0",
-  "author": "scscms<guangda1234@126.com>",
-  "description": "菜鸟云打印Vue编辑器",
+  "author": "dsh<632579114@qq.com>",
+  "description": "打印模板编辑器",
   "license": "MIT",
   "private": true,
   "scripts": {
@@ -10,8 +10,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@tinymce/tinymce-vue": "^3.2.2",
     "element-ui": "^2.4.8",
-    "vue": "^2.5.17"
+    "vue": "^2.5.17",
+    "vue-print-nb": "^1.5.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.1",
